--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <p> "Desenvolvedor de sistema junior"</p>
 
   <button><a href="https://github.com/Arthurfefe" target="__blank">  GitHub</button> </a> 
-  <button><a href="https://www.canva.com/"  target="__blank">Canva</button></a> 
+  <button><a href="https://wa.me/553498746384"  target="__blank">WhatsApp</button></a> 
   <button><a href="https://www.linkedin.com/in/arthur-fernandes-8b0bba369/" target="__blank">LinkedIn</button> </a>
-  <button><a href="https://ww.tiktok.com/arthur_fefe_" target="__blank">Twitter</button></a>
-  <button><a href="https://ww.Instagram.com/arthur_fefe_" target="__blank">Instagram</button> </a>
+  <button><a href="https://www.tiktok.com/arthur_fefe_" target="__blank">tiktok</button></a>
+  <button><a href="https://www.Instagram.com/arthur_fefe_" target="__blank">Instagram</button> </a>
 </div>
 </body>
 </html>
